add introduction component

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,7 @@
 			src="SAPUI5/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
+			data-sap-ui-language="en"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-resourceroots='{"utegration.fiori.frontend": ""}'>
 		</script>
