--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
 		<title>UTG_FIORI_FRONTEND</title>
 
 		<script id="sap-ui-bootstrap"
-			src="SAPUI5/resources/sap-ui-core.js"
+			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-language="en"
